# emma

./: .gitignore  .markdownlint.json  .markdownlint.yaml  .markdownlint.yml  .markdownlintignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  create_test_devices.py  docker-compose.yml  main.py  menu.py  pyproject.toml  tasks.py  template_builder.py  test.ipynb
.github/: dependabot.yml  labels.yml
.github/workflows/: ci-docker-image.yml  ci.yml  release.yml  sync-docs.yml
.vale/styles/: spelling-exceptions.txt
.vale/styles/Infrahub/: sentence-case.yml
default_schemas/: dcim.yml  ipam.yml  ntp.json  ntp.yml  snmp.json
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: experimental.mdx  readme.mdx
docs/docs/features/: data-import-export.mdx  schema-builder.mdx  schema-library.mdx  schema-management.mdx
docs/docs/getting-started/: configuration.mdx  first-steps.mdx  installation.mdx
docs/docs/guides/: building-your-first-schema.mdx
docs/docs/reference/: configuration.mdx  feature-flags.mdx  troubleshooting.mdx
emma/: __init__.py  analyzer_utils.py  assistant_utils.py  cli.py  git_utils.py  github.py  gql_queries.py  infrahub.py  streamlit_helper.py  streamlit_utils.py  utils.py
emma/analyzer_components/: __init__.py  extract_data.py  generate_template.py  select_devices.py  select_schema.py  update_repo.py  upload_data.py  view_data.py
emma/changelog.d/: 4.added.md
emma/infrahub/: __init__.py
pages/: 1_infrahub_status.py  2_explore_data.py  3_import_data.py  4_schema_generator.py  5_import_schema.py  6_schema_visualizer.py  config_analyzer.py  data_exporter.py  data_importer.py  docs_agent.py  explore_data.py  import_data.py  import_schema.py  infrahub_explorer.py  pop_build.py  query_builder.py  schema_builder.py  schema_library.py  schema_loader.py  schema_visualizer.py  template_builder.py  test.py  test_page.py
test_juns/: core-1.5558.conf
test_schemas/: infra_device_extension.yml
tests/: __init__.py  test_infrahub.py  test_streamlit_utils.py  test_utils.py
util_scripts/: create_test_devices.py
